@@ -54,9 +54,10 @@ layout: documentation
 * [Hootsuite](https://hootsuite.com)
 * [HubSpot](http://www.hubspot.com)
 * [Ignidata](http://www.ignidata.com)
+* [iQIYI](http://www.iqiyi.com/)
 * [Jobrapido](http://www.jobrapido.com)
 * [Jusbrasil](http://www.jusbrasil.com.br)
-* [iQIYI](http://www.iqiyi.com/)
+* [Kakao](http://www.kakaocorp.com/)
 * [Learnium](http://www.learnium.net/)
 * [LIFX](http://lifx.co)
 * [Linkernetworks](http://www.linkernetworks.com)
